Fixed loook of upload button on mobile display.

--- a/styles/Applycard.module.css
+++ b/styles/Applycard.module.css
@@ -54,7 +54,9 @@
   gap: 4px;
 
   max-width: 200px;
+  /* width: 100%; */
   height: 48px;
+  min-height: 36px;
 
   align-items: center;
 
@@ -70,6 +72,7 @@
 
 .uploadButton {
   display: none;
+  height: 48px;
 }
 
 .fullwidth {
@@ -98,5 +101,28 @@
     gap: 8px;
 
     min-width: 200px;
+  }
+
+  .uploadButtonLabel {
+    display: flex;
+    flex-direction: row;
+    gap: 4px;
+  
+    max-width: 100%;
+    /* width: 100%; */
+    min-width: 200px;
+    height: 48px;
+    min-height: 36px;
+  
+    align-items: center;
+  
+    padding-left: 16px;
+    padding-right: 16px;
+  
+    border-color: var(--main-color);
+    border-width: 1px;
+    border-radius: 8px;
+  
+    cursor: pointer;
   }
 }
